// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet Actions .clearSnippet by default 1`] = `
Array [
  Object {
    "type": "CLEAR_SNIPPET",
  },
]
`;

exports[`Snippet Actions .createSnippet when assigned to master account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "id": "test-snippet",
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/labs/snippets",
    },
    "type": "CREATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .createSnippet when shared with all subaccounts 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "id": "test-snippet",
        "name": "Test Snippet",
        "shared_with_subaccounts": true,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/labs/snippets",
    },
    "type": "CREATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .createSnippet with a subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "id": "test-snippet",
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {
        "x-msys-subaccount": "example-subaccount",
      },
      "method": "POST",
      "url": "/labs/snippets",
    },
    "type": "CREATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .createSnippet with amp_html 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": "<p>AMP Testing...</p>",
          "html": undefined,
          "text": undefined,
        },
        "id": undefined,
        "name": undefined,
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/labs/snippets",
    },
    "type": "CREATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .createSnippet with html and text content 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": "<p>Testing...</p>",
          "text": "Testing...",
        },
        "id": "test-snippet",
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/labs/snippets",
    },
    "type": "CREATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .deleteSnippet when assigned to master account 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": "test-snippet",
        "subaccountId": undefined,
      },
      "headers": Object {},
      "method": "DELETE",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "DELETE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .deleteSnippet when assigned to subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": "test-snippet",
        "subaccountId": 101,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "DELETE",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "DELETE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .getSnippet with id 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": 123,
        "subaccountId": undefined,
      },
      "headers": Object {},
      "method": "GET",
      "url": "/labs/snippets/123",
    },
    "type": "GET_SNIPPET",
  },
]
`;

exports[`Snippet Actions .getSnippet with id and subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": 123,
        "subaccountId": 456,
      },
      "headers": Object {
        "x-msys-subaccount": 456,
      },
      "method": "GET",
      "url": "/labs/snippets/123",
    },
    "type": "GET_SNIPPET",
  },
]
`;

exports[`Snippet Actions .getSnippets when assigned to master account 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/labs/snippets",
    },
    "type": "GET_SNIPPETS",
  },
]
`;

exports[`Snippet Actions .updateSnippet when assigned to master account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "UPDATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .updateSnippet when shared with all subaccounts 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "name": "Test Snippet",
        "shared_with_subaccounts": true,
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "UPDATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .updateSnippet with a subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "text": "Testing...",
        },
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {
        "x-msys-subaccount": "example-subaccount",
      },
      "method": "PUT",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "UPDATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .updateSnippet with amp_html 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": "<p>AMP Testing...</p>",
          "html": undefined,
          "text": undefined,
        },
        "name": undefined,
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/labs/snippets/undefined",
    },
    "type": "UPDATE_SNIPPET",
  },
]
`;

exports[`Snippet Actions .updateSnippet with html and text content 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": "<p>Testing...</p>",
          "text": "Testing...",
        },
        "name": "Test Snippet",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/labs/snippets/test-snippet",
    },
    "type": "UPDATE_SNIPPET",
  },
]
`;
